# election_forecaster

./: .gitignore  README.md  pyproject.toml
dev/: model_development.ipynb
election_forecaster/model_outputs/: poll_results_A.csv  poll_results_B.csv  poll_results_D.csv  struct_dict_A.json  struct_dict_C.json  struct_dict_D.json
election_forecaster/notebooks/: 00_model.ipynb  02_simulations_national.ipynb  03_final_cleaning.ipynb
election_forecaster/notebooks/model_outputs/: poll_results_C.csv  poll_results_E.csv  struct_dict_B.json  struct_dict_E.json
election_forecaster/results/: national_forecast_A.csv  national_forecast_B.csv  national_forecast_C.csv  national_forecast_D.csv  national_forecast_E.csv  provincial_forecast_A.csv  provincial_forecast_B.csv  provincial_forecast_C.csv  provincial_forecast_D.csv  provincial_forecast_E.csv
election_forecaster/results_no_cleaning/: national_forecast_A.csv  national_forecast_B.csv  national_forecast_C.csv  national_forecast_D.csv  national_forecast_E.csv  provincial_forecast_A.csv  provincial_forecast_B.csv  provincial_forecast_C.csv  provincial_forecast_D.csv  provincial_forecast_E.csv
