[tool.poetry]
name = "election-forecaster"
version = "0.1.0"
description = "An elections forecasting model."
authors = ["Katya Beebe <katerina.beebe@gmail.com>"]
readme = "README.md"
packages = [{include = "election_forecaster"}]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.11"
pandas = "^2.0.3"
ipykernel = "^6.25.2"
scipy = ">=1.7.3,<1.8.0"
pymc3 = "^3.11.5"
pytensor = "^2.17.3"
seaborn = "^0.13.0"
matplotlib = "^3.8.0"
jupyter-client = "<8"
pyzmq = "<25"
jupyterlab = "^4.0.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
